发现广场搜索接口接入

--- a/app/src/main/res/layout-v21/activity_person_info.xml
+++ b/app/src/main/res/layout-v21/activity_person_info.xml
@@ -45,7 +45,7 @@
                 </com.sunny.youyun.views.EasyBar>
 
                 <ImageView
-                    android:id="@+id/img_avatar"
+                    android:id="@+id/img_icon"
                     android:layout_width="70dp"
                     android:layout_height="70dp"
                     android:layout_gravity="center_horizontal"
@@ -57,7 +57,7 @@
                     app:srcCompat="@drawable/icon_logo_round" />
 
                 <TextView
-                    android:id="@+id/tv_nickname"
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
@@ -69,7 +69,7 @@
                     android:transitionName="@string/mine_share_nickname"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/img_avatar" />
+                    app:layout_constraintTop_toBottomOf="@id/img_icon" />
 
                 <ImageView
                     android:id="@+id/img_edit"
@@ -77,9 +77,9 @@
                     android:layout_height="12dp"
                     android:layout_marginStart="16dp"
                     android:src="@drawable/icon_mine_info_edit"
-                    app:layout_constraintBottom_toTopOf="@id/tv_nickname"
-                    app:layout_constraintStart_toEndOf="@id/tv_nickname"
-                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
+                    app:layout_constraintBottom_toTopOf="@id/tv_name"
+                    app:layout_constraintStart_toEndOf="@id/tv_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <View
                     android:id="@+id/divide_line"
@@ -89,7 +89,7 @@
                     android:background="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <TextView
                     android:id="@+id/following_num"
