--- a/app/src/main/res/layout-v21/fragment_mine.xml
+++ b/app/src/main/res/layout-v21/fragment_mine.xml
@@ -23,7 +23,7 @@
             android:background="@drawable/ripple_bg_white">
 
             <ImageView
-                android:id="@+id/img_avatar"
+                android:id="@+id/img_icon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_marginBottom="8dp"
@@ -51,7 +51,7 @@
                 app:srcCompat="@drawable/icon_arrow" />
 
             <TextView
-                android:id="@+id/tv_nickname"
+                android:id="@+id/tv_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
@@ -60,9 +60,9 @@
                 android:textSize="16sp"
                 android:textColor="@color/text_gray"
                 android:text="xxxxx"
-                app:layout_constraintBottom_toTopOf="@+id/img_avatar"
-                app:layout_constraintStart_toEndOf="@+id/img_avatar"
-                app:layout_constraintTop_toBottomOf="@+id/img_avatar" />
+                app:layout_constraintBottom_toTopOf="@+id/img_icon"
+                app:layout_constraintStart_toEndOf="@+id/img_icon"
+                app:layout_constraintTop_toBottomOf="@+id/img_icon" />
 
             <ImageView
                 android:id="@+id/img_qr_code"
@@ -83,11 +83,11 @@
                 android:layout_height="18dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginStart="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/tv_nickname"
+                app:layout_constraintBottom_toTopOf="@+id/tv_name"
                 app:layout_constraintEnd_toStartOf="@+id/img_qr_code"
                 app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/tv_nickname"
-                app:layout_constraintTop_toBottomOf="@+id/tv_nickname"
+                app:layout_constraintStart_toEndOf="@+id/tv_name"
+                app:layout_constraintTop_toBottomOf="@+id/tv_name"
                 app:srcCompat="@drawable/icon_mine_edit"
                 android:layout_marginRight="8dp"
                 android:layout_marginLeft="16dp" />
