--- a/app/src/main/res/layout/activity_person_info.xml
+++ b/app/src/main/res/layout/activity_person_info.xml
@@ -43,7 +43,7 @@
                 </com.sunny.youyun.views.EasyBar>
 
                 <ImageView
-                    android:id="@+id/img_avatar"
+                    android:id="@+id/img_icon"
                     android:layout_width="74dp"
                     android:layout_height="74dp"
                     android:layout_gravity="center_horizontal"
@@ -57,7 +57,7 @@
 
 
                 <TextView
-                    android:id="@+id/tv_nickname"
+                    android:id="@+id/tv_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="14dp"
@@ -68,7 +68,7 @@
                     android:textSize="17sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/img_avatar" />
+                    app:layout_constraintTop_toBottomOf="@id/img_icon" />
 
                 <ImageView
                     android:id="@+id/img_edit"
@@ -77,9 +77,9 @@
                     android:layout_marginLeft="16dp"
                     android:layout_marginStart="16dp"
                     android:src="@drawable/icon_mine_info_edit"
-                    app:layout_constraintBottom_toTopOf="@id/tv_nickname"
-                    app:layout_constraintStart_toEndOf="@id/tv_nickname"
-                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
+                    app:layout_constraintBottom_toTopOf="@id/tv_name"
+                    app:layout_constraintStart_toEndOf="@id/tv_name"
+                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <View
                     android:id="@+id/divide_line"
@@ -89,7 +89,7 @@
                     android:background="@color/white"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tv_nickname" />
+                    app:layout_constraintTop_toBottomOf="@id/tv_name" />
 
                 <TextView
                     android:id="@+id/following_num"
