--- a/app/src/main/res/layout/person_info_dynamic_item.xml
+++ b/app/src/main/res/layout/person_info_dynamic_item.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="35dp" />
 
     <ImageView
-        android:id="@+id/img_avatar"
+        android:id="@+id/img_icon"
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:layout_marginStart="16dp"
@@ -38,7 +38,7 @@
         android:lines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_date"
-        app:layout_constraintStart_toEndOf="@+id/img_avatar"
+        app:layout_constraintStart_toEndOf="@+id/img_icon"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginRight="8dp"
         android:layout_marginLeft="16dp" />
@@ -59,7 +59,7 @@
         android:layout_marginRight="12dp" />
     <View
         android:id="@+id/line_down"
-        app:layout_constraintTop_toBottomOf="@id/img_avatar"
+        app:layout_constraintTop_toBottomOf="@id/img_icon"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="35dp"
         android:background="@color/gray"
