聊天界面初步，先去接收藏接口了

--- a/app/src/main/res/layout/activity_file_detail_online.xml
+++ b/app/src/main/res/layout/activity_file_detail_online.xml
@@ -27,7 +27,7 @@
 
     <include layout="@layout/divide_item"/>
 
-    <include layout="@layout/comment_view"/>
+    <include layout="@layout/send_view"/>
 
 
 </LinearLayout>
