--- a/app/src/main/res/layout/send_view.xml
+++ b/app/src/main/res/layout/send_view.xml
@@ -8,7 +8,7 @@
     >
 
     <EditText
-        android:id="@+id/et_comment_content"
+        android:id="@+id/et_content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
