--- a/app/src/main/res/layout/easy_refresh_end.xml
+++ b/app/src/main/res/layout/easy_refresh_end.xml
@@ -9,7 +9,8 @@
     <TextView
         android:id="@+id/end_text"
         android:gravity="center"
-        android:text="-------------- end --------------"
+        android:padding="20dp"
+        android:text="-------------- END --------------"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
