--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -46,13 +46,13 @@
     </declare-styleable>
 
 
-    <attr name="menu_title" format="string" />
+    <attr name="menu_title" format="string|reference" />
     <attr name="menu_title_size" format="dimension" />
     <attr name="menu_title_color" format="color" />
     <attr name="right_margin" format="dimension" />
     <attr name="left_margin" format="dimension" />
 
-    <attr name="menu_value" format="string" />
+    <attr name="menu_value" format="string|reference" />
     <attr name="menu_value_size" format="dimension" />
     <attr name="menu_value_color" format="color" />
     <attr name="left_resource" format="reference" />
