--- a/app/src/main/res/layout/easy_refresh_pull_load_header.xml
+++ b/app/src/main/res/layout/easy_refresh_pull_load_header.xml
@@ -9,20 +9,16 @@
 
     <ProgressBar
         android:id="@+id/refresh_progressBar"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
         style="?android:attr/progressBarStyle"
-        android:indeterminateDuration="500"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
         android:indeterminateDrawable="@drawable/progress_circle_shape"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:indeterminateDuration="500"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/refresh_arrow"
+        app:layout_constraintEnd_toEndOf="@+id/refresh_arrow"
+        app:layout_constraintStart_toStartOf="@+id/refresh_arrow"
+        app:layout_constraintTop_toTopOf="@+id/refresh_arrow" />
 
     <TextView
         android:id="@+id/refresh_text"
@@ -52,12 +48,4 @@
         app:srcCompat="@drawable/refresh_arrow"
         android:layout_marginRight="8dp" />
 
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:background="@color/line_gray"-->
-        <!--android:layout_height="0.5dp"-->
-        <!--app:layout_constraintBottom_toBottomOf="parent"-->
-        <!--app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--app:layout_constraintRight_toRightOf="parent"-->
-        <!--/>-->
 </android.support.constraint.ConstraintLayout>
