--- a/app/src/main/res/layout/chat_item_right.xml
+++ b/app/src/main/res/layout/chat_item_right.xml
@@ -20,7 +20,7 @@
         android:layout_marginRight="8dp" />
 
     <TextView
-        android:id="@+id/tv_tv_content"
+        android:id="@+id/tv_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
