--- a/app/src/main/res/layout/finding_item.xml
+++ b/app/src/main/res/layout/finding_item.xml
@@ -8,7 +8,7 @@
 
 
     <ImageView
-        android:id="@+id/img_icon"
+        android:id="@+id/img_avatar"
         android:layout_width="19dp"
         android:layout_height="19dp"
         android:layout_marginStart="10dp"
@@ -29,10 +29,10 @@
         android:textColor="@color/gray"
         android:ellipsize="end"
         android:lines="1"
-        app:layout_constraintBottom_toTopOf="@+id/img_icon"
+        app:layout_constraintBottom_toTopOf="@+id/img_avatar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/img_icon"
-        app:layout_constraintTop_toBottomOf="@+id/img_icon" />
+        app:layout_constraintStart_toEndOf="@+id/img_avatar"
+        app:layout_constraintTop_toBottomOf="@+id/img_avatar" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
