--- a/app/src/main/res/layout/main_bottom_bar.xml
+++ b/app/src/main/res/layout/main_bottom_bar.xml
@@ -1,24 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
+    android:layout_height="@dimen/main_bottom_bar_height"
     android:background="@color/white"
-    android:layout_height="@dimen/main_bottom_bar_height">
+    android:orientation="horizontal">
+
     <ImageView
         android:id="@+id/btn_main_page"
-        android:src="@drawable/icon_mainpage_selected"
         style="@style/BottomBar_image"
-        />
+        android:src="@drawable/icon_mainpage_selected" />
+
     <ImageView
         android:id="@+id/btn_find"
-        android:src="@drawable/icon_findng"
-        style="@style/BottomBar_image" />
-    <ImageView
-        android:id="@+id/btn_msg"
-        android:src="@drawable/icon_message"
-        style="@style/BottomBar_image" />
+        style="@style/BottomBar_image"
+        android:src="@drawable/icon_findng" />
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <ImageView
+            android:id="@+id/btn_msg"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:foregroundGravity="center"
+            android:paddingBottom="@dimen/icon_padding_top_bottom"
+            android:paddingTop="@dimen/icon_padding_top_bottom"
+            android:src="@drawable/icon_message" />
+
+        <com.sunny.youyun.views.drag_view.DraggableFlagView
+            android:id="@+id/draggableView"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_alignEnd="@+id/btn_msg"
+            android:layout_alignParentTop="true"
+            android:layout_alignRight="@+id/btn_msg"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp" />
+    </RelativeLayout>
+
     <ImageView
         android:id="@+id/btn_mine"
-        android:src="@drawable/icon_mine"
-        style="@style/BottomBar_image" />
+        style="@style/BottomBar_image"
+        android:src="@drawable/icon_mine" />
 </LinearLayout>
