--- a/app/src/main/res/layout/message_item.xml
+++ b/app/src/main/res/layout/message_item.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="?selectableItemBackground"
-    android:layout_height="@dimen/file_info_item_height">
+    android:layout_height="@dimen/file_info_item_height"
+    android:background="?selectableItemBackground">
 
     <ImageView
         android:id="@+id/img_icon"
         android:layout_width="@dimen/message_icon_size"
         android:layout_height="@dimen/message_icon_size"
-        app:srcCompat="@drawable/code"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="15dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/code" />
 
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="0dp"
         android:layout_height="25dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
         android:ellipsize="end"
         android:maxLines="1"
@@ -33,7 +33,6 @@
         app:layout_constraintEnd_toStartOf="@+id/tv_date"
         app:layout_constraintStart_toEndOf="@+id/img_icon"
         app:layout_constraintTop_toTopOf="@+id/img_icon"
-        android:layout_marginLeft="16dp"
         tools:layout_editor_absoluteY="9dp" />
 
     <TextView
@@ -41,6 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
         android:ellipsize="end"
         android:lines="1"
         android:text="balabalabala"
@@ -48,21 +48,36 @@
         android:textSize="11sp"
         app:layout_constraintBottom_toBottomOf="@+id/img_icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
-        android:layout_marginRight="8dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/tv_name" />
 
     <TextView
         android:id="@+id/tv_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:text="17-9-20"
         android:textColor="@color/gray"
         android:textSize="11sp"
-        android:text="17-9-20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/tv_name"
-        android:layout_marginRight="8dp"
         tools:ignore="SmallSp" />
 
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="5dp"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_date"
+        app:layout_constraintVertical_bias="0.0">
 
+        <com.sunny.youyun.views.drag_view.DraggableFlagView
+            android:id="@+id/draggableView"
+            android:layout_width="20dp"
+            android:layout_height="20dp" />
+    </RelativeLayout>
 </android.support.constraint.ConstraintLayout>
